--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -849,9 +849,8 @@ section:not(#about) h2.framed-subtitle {
   to { box-shadow: 0 0 25px rgba(0, 246, 255, 0.6); }
 }
 
-/* Image / iframe */
-.portfolio-item iframe,
-.portfolio-item img {
+/* IFrame Image (Interactive Data Visuals */
+.portfolio-item iframe{
   width: 100%;
   height: 420px;
   border: none;
@@ -868,6 +867,13 @@ iframe[src*="datawrapper.dwcdn.net"] {
 .portfolio-item iframe {
   z-index: 1;
   position: relative;
+}
+
+/* Other Project Images */
+.portfolio-item img {
+  width: 100%;
+  height: 420px;
+  object-fit: cover;
 }
 
 /* Text Content */
